# TrackingWithLessTraining

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
tools/: split_video.py
