[tool.poetry]
name = "trackingwithlesstraining"
version = "0.1.0"
description = ""
authors = ["MISday <47630005+MISday@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"
opencv-python = "^4.8.1.78"
tqdm = "^4.66.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
